# huffman_compressor

./: .gitignore  CMakeLists.txt  README.md
ext/nowide/: CMakeLists.txt
lib/: CMakeLists.txt
lib/hmcmpsr/: CMakeLists.txt  LICENSE  README.md
lib/hmcmpsr/check/: detect_gmp.c
lib/hmcmpsr/containers/include/zzc_container/: map_wrapper.hpp  splay_tree.hpp  vector.hpp
lib/hmcmpsr/ext/containers/include/zzc_container/: queue.hpp
lib/hmcmpsr/include/: char_frequency.hpp  custream.hpp  genbitstream.hpp  hmcompressor.hpp  huffman_tree.hpp
lib/hmcmpsr/include/hmcmpsr/: advancement.hpp  char_frequency.hpp  custream.hpp  genbitstream.hpp  hmcompressor.hpp  huffman_tree.hpp
lib/hmcmpsr/sources/: advancement.cpp  change_endian.hpp  char_frequency.cpp  custream.cpp  genbitstream.cpp  hmcompressor.cpp  huffman_tree.cpp  print_advancement_stream.hpp
nowide/: README.md
src/: CMakeLists.txt  advancement_info.cpp  advancement_info.hpp  argument.cpp  argument.hpp  exit.hpp  main.cpp
test/: benchmark.sh  branch.sh  test-basic.sh  test-branch.sh  test-combined.sh  test-unit-length.sh
